Issue #2979324: Changed the z-index to 10 for the selected view columns check icon, so that it could go over all other position: absolute labels for (Images, Videos, Documents, ...).

--- a/enhancers/multiselect/css/entity_browser_enhanced.multiselect.css
+++ b/enhancers/multiselect/css/entity_browser_enhanced.multiselect.css
@@ -60,6 +60,7 @@ nav.eb-tabs ul li.active a {
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   display: block;
+  z-index: 10;
 }
 
 .view .views-col .field--name-name {
